--- a/style.css
+++ b/style.css
@@ -17,7 +17,16 @@ img{
 
 nav{
     background-color: rgb(44, 62, 80);
+    height: 100px;
+}
 
+.start,
+.list{
+    line-height: 100px;
+}
+
+.list{
+    text-align: right;
 }
 
 .jumbotron{
@@ -62,4 +71,19 @@ nav{
 
 .pb-10{
     padding-bottom: 10rem;
+}
+
+
+/* FOOTER */
+.upper{
+    background-color: rgb(58, 84, 109) ;
+}
+
+.bottom{
+background-color: rgb(44, 62, 80);
+  height:80px;
+}
+
+.copyright{
+   line-height: 80px;
 }
